--- a/deno.json
+++ b/deno.json
@@ -74,7 +74,7 @@
       "tags": ["fresh", "recommended"]
     }
   },
-  "nodeModulesDir": false,
+  "nodeModulesDir": "auto",
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
